<resources>
    <string name="app_name">Walk Walk Revolution</string>
    <string name="action_settings">Settings</string>
    <string name="steps_walked">Steps Walked Today:</string>
    <string name="distance_walked">Distance Walked Today:</string>
    <string name="routes_button">Routes</string>
    <string name="add_routes_button">Add New Route</string>
    <string name="test_num">0</string>
    <string name="height_prompt">Enter Height in Inches</string>
    <string name="confirm_prompt">Confirm</string>
    <string name="mock_step_button">Mock Step/Time</string>
    <string name="team_button">My Team</string>
    <string name="team_routes_button">Team Routes</string>

    <string name="name_text">Name</string>
    <string name="start_text">Start</string>
...
    <string name="routeTitle">New Route</string>
    <string name="walkStopButton">Stop</string>

    <string name="start_button">Start!</string>
    <string name="welcome_message">Welcome to Walk Walk Revolution!</string>
    <string name="stop_button">Stop Session</string>
    <string name="update_button">Update Steps/Distance</string>
    <string name="mock_step_key">MOCK_STEPS</string>
    <string name="mock_time_key">MOCK_TIMES</string>
    <string name="mock_shared_pref_key">MOCK_SHARED_PREF</string>
    <string name="token_shared_pref_key">TOKEN_SHARED_PREF</string>
    <string name="token_key">TOKEN</string>
    <string name="message_type">messageType</string>
...
